sumo/tests/duarouter/trips/errors/vehicle_empty_departspeed/errors.duarouter
Error: Attribute 'departSpeed' in definition of a trip is empty.
Error: Invalid departSpeed definition for vehicle ''
Quitting (on error).
